2005-03-30  Edward Hervey  <bilboed@bilboed.com>

	* gnl/gnlobject.h:
	* gnl/gnlobject.c:
	Removed gnl_object_nearest_change() and cleanup of commented code

2005-03-30  Edward Hervey  <bilboed@bilboed.com>

	* gnl/Makefile.am:
	* gnl/gnl.h:
	* gnl/gnltypes.h:
	* gnl/gnlgroup.c:
	* gnl/gnlgroup.h:
	* gnl/gnltimeline.h:
	* gnl/gnltimeline.c:
	* gnl/gnlelements.c:
	* docs/libs/gnonlin-docs.sgml:
	* docs/libs/gnonlin-sections.txt:
	* docs/libs/gnonlin.types:
	* docs/libs/tmpl/gnltimeline.sgml:
	* docs/libs/tmpl/gnlgroup.sgml:
	Removing GnlGroup

	* docs/libs/gnonlin-docs.sgml:
	* docs/libs/gnonlin-sections.txt:
	* docs/libs/tmpl/gnlobject.sgml:
	* gnl/gnlobject.h:
	* gnl/gnlobject.c:
	Removing rate control property for GnlObject

2005-03-29  Edward Hervey  <bilboed@bilboed.com>

	* test/Makefile.am: 
	added EXTRA_DIST=pipelines.c and -I$(top_srcdir) to build flags

	* gnl/Makefile.am: (gnl_headers): forgot to add gnlobject.h

	* docs/libs/Makefile.am: (GTKDOC_CFLAGS): added -I$(top_srcdir) for build

	* Makefile.am: (EXTRA_DIST): removed gnonlin.m4

2005-03-24  Edward Hervey  <bilboed@bilboed.com>

	* docs/libs/tmpl/gnl.sgml:
	* docs/libs/tmpl/gnlcomposition.sgml:
	* docs/libs/tmpl/gnlgroup.sgml:
	* docs/libs/tmpl/gnlobject.sgml:
	* docs/libs/tmpl/gnloperation.sgml:
	* docs/libs/tmpl/gnlsource.sgml:
	* docs/libs/tmpl/gnltimeline.sgml:
	Added sgml file templates for documentation

	* docs/libs/gnonlin.types:
	* docs/libs/gnonlin-sections.txt:
	* docs/libs/gnonlin-docs.sgml:
	Added files for better hierarchy of documentation

	* configure.ac:
	* docs/Makefile.am:
	* docs/version.entities.in:
	* docs/libs/Makefile.am: 
	Added version.entities for documentation

	* docs/libs/Makefile.am: (GTKDOC_LIBS): added libgnl.la dependency

	* gnl/gnlsource.c: (source_getfunction): typo mistake

	* gnonlin.pc.in: more corrections from Wouter Paesen for correct
	dependency checks

	* configure.ac: (GST_PLUGIN_LDFLAGS), (GST_REQ): 
	sanity corrections from Wouter Paesen
